# ChangeLog for sci-electronics/magic
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/magic/ChangeLog,v 1.43 2007/06/08 19:18:12 calchan Exp $

  08 Jun 2007; Denis Dupeyron <calchan@gentoo.org> -magic-7.5.78.ebuild:
  Removed old development version.

*magic-7.5.79 (30 May 2007)

  30 May 2007; Denis Dupeyron <calchan@gentoo.org> +magic-7.5.79.ebuild:
  Development branch version bump.

  24 May 2007; Denis Dupeyron <calchan@gentoo.org> -magic-7.4.34.ebuild:
  Removed magic-7.4.34 due to DRC and GDS output bugs.

*magic-7.4.35 (30 Apr 2007)

  30 Apr 2007; Denis Dupeyron <calchan@gentoo.org> +magic-7.4.35.ebuild:
  Version bump.

  09 Apr 2007; Denis Dupeyron <calchan@gentoo.org> -magic-7.4.19.ebuild:
  Post-stabilization cleanup.

  09 Apr 2007; Raúl Porcel <armin76@gentoo.org> magic-7.4.34.ebuild:
  x86 stable wrt bug 173833

  09 Apr 2007; Matti Bickel <mabi@gentoo.org> magic-7.4.34.ebuild:
  ppc stable (bug #173833)

  09 Apr 2007; Peter Weller <welp@gentoo.org> magic-7.4.34.ebuild:
  Stable on amd64 wrt bug 173833

  08 Apr 2007; Denis Dupeyron <calchan@gentoo.org> -magic-7.5.73.ebuild:
  Removed old development ebuild.

*magic-7.5.78 (01 Apr 2007)

  01 Apr 2007; Denis Dupeyron <calchan@gentoo.org> +magic-7.5.78.ebuild:
  Development branch version bump.

  24 Mar 2007; Denis Dupeyron <calchan@gentoo.org> ChangeLog:
  Fixed ChangeLog, see bug #171962.

  14 Mar 2007; Denis Dupeyron <calchan@gentoo.org> -magic-7.4.29.ebuild,
  -magic-7.4.33.ebuild, -magic-7.5.71.ebuild:
  Removed old ebuilds.

*magic-7.5.73 (09 Mar 2007)

  09 Mar 2007; Denis Dupeyron <calchan@gentoo.org> +magic-7.5.73.ebuild:
  Development branch version bump.

*magic-7.4.34 (07 Mar 2007)

  07 Mar 2007; Denis Dupeyron <calchan@gentoo.org> +magic-7.4.34.ebuild:
  Stable branch version bump.

  27 Feb 2007; Denis Dupeyron <calchan@gentoo.org> -magic-7.5.69.ebuild:
  Removed old development version.
