@@ -1,18 +1,23 @@
 DIST 2002a.tar.gz 6601961 RMD160 3eb7e61999b032dc47bddc3398543f4d4cde3adf SHA1 908160476c9cddcedfb8a73f78f67f2c66480cc2 SHA256 8b47889fcbcd36b1cdc2e51fc0aeb8c17b7780f559b01ca1209f9ed5f8c38d19
 DIST magic-7.4.35.tgz 3603956 RMD160 35ba7a98d6addb42d22aca27011fccd1dd5523ce SHA1 24210efff22247df254c71b13234535e943d4bfc SHA256 1074b6e8582f8804c72132352faf18a859f465a68e64e8d3001f1cfe2bfb3e66
+DIST magic-7.4.46.tgz 3605986 RMD160 695623481c4c9d4437bd30c629a6c8bac91f6ad6 SHA1 95a344c6b4ff54466f0a7521a322d5f8da1a430f SHA256 55f377500a861b12d21483b002c72a7a5fb9b35885f7dc858ee98f4a1e191cac
 DIST magic-7.5.79.tgz 3627915 RMD160 58fffa06c3020b14a999d2a540aea9c9fe2ffed4 SHA1 61ef1294e9b2d78e2e5e262a77697fee6f60d868 SHA256 e6666fda783ea116c7a9513fc687294118555fb2fa30b4ab15002d04b25803d3
 EBUILD magic-7.4.35.ebuild 1224 RMD160 fe6e017da00f849a988d77cc639ea5dfa005f4fe SHA1 a740f56ed8db9e6b874cc189d159812e4b87a711 SHA256 f5047ec9865a0a924c285d9263d569a2837df0a1c31a9c06d26fbc29de1bcea3
 MD5 674e784371c33df44eb4feff5f724824 magic-7.4.35.ebuild 1224
 RMD160 fe6e017da00f849a988d77cc639ea5dfa005f4fe magic-7.4.35.ebuild 1224
 SHA256 f5047ec9865a0a924c285d9263d569a2837df0a1c31a9c06d26fbc29de1bcea3 magic-7.4.35.ebuild 1224
+EBUILD magic-7.4.46.ebuild 1233 RMD160 2b517c8fa4f88f3db9b67b14e344dfdbb5cb65ca SHA1 ed9d01104be2577736df21b7b53e177c72611b31 SHA256 426c7288a66ba386ef3ea2da705ee8bdd243078e6d26ba8fc005afd312bb4433
+MD5 1ac0bf7a1ab9fc9b7e3e219d1062b008 magic-7.4.46.ebuild 1233
+RMD160 2b517c8fa4f88f3db9b67b14e344dfdbb5cb65ca magic-7.4.46.ebuild 1233
+SHA256 426c7288a66ba386ef3ea2da705ee8bdd243078e6d26ba8fc005afd312bb4433 magic-7.4.46.ebuild 1233
 EBUILD magic-7.5.79.ebuild 1258 RMD160 db78f3330ce322914f2201d2f39da2550909aa41 SHA1 bb0c5667f48b737a3c9c5416356524bdff991df9 SHA256 662696145a97590036047109751deaa3481d57d790a37b2eed3a924028a82fac
 MD5 a86dff96c40e173da59e1be98e8114e6 magic-7.5.79.ebuild 1258
 RMD160 db78f3330ce322914f2201d2f39da2550909aa41 magic-7.5.79.ebuild 1258
 SHA256 662696145a97590036047109751deaa3481d57d790a37b2eed3a924028a82fac magic-7.5.79.ebuild 1258
-MISC ChangeLog 7703 RMD160 cb7e5dfb5f8d0a3b7370c502a095a714f05f141b SHA1 58bd599248e868633b561768a61bb9c9c96c76c2 SHA256 73f4c29284ad5fdab38ba05aaa50665327c6e521b9b4ea1c6b0dcd9207f2eae7
-MD5 edcd24f9cdf73d8aa4183912fc71610f ChangeLog 7703
-RMD160 cb7e5dfb5f8d0a3b7370c502a095a714f05f141b ChangeLog 7703
-SHA256 73f4c29284ad5fdab38ba05aaa50665327c6e521b9b4ea1c6b0dcd9207f2eae7 ChangeLog 7703
+MISC ChangeLog 7836 RMD160 1c4b04122568f7097b000aa9159a960dd0f8c3a5 SHA1 7845c6f13d13c69c7237d6dbeabca46d97a5866b SHA256 9851b862616369a03569bace0a97a3ebe50d77e152097b8630298488e78f6cef
+MD5 3849bd14218bb3e13d8579589581c04b ChangeLog 7836
+RMD160 1c4b04122568f7097b000aa9159a960dd0f8c3a5 ChangeLog 7836
+SHA256 9851b862616369a03569bace0a97a3ebe50d77e152097b8630298488e78f6cef ChangeLog 7836
 MISC metadata.xml 900 RMD160 2eadae625fcf32b2b3c16cc5dea80123066b943c SHA1 015acb62eb2b6ba91c08ae1954a5bddef8d547d4 SHA256 a53b73f34be6d5dff3316ac95d407f45b7272a4934420b21cf4ca2ea81b153da
 MD5 6a9b4b4978398d58fc6b039eae3fad5d metadata.xml 900
 RMD160 2eadae625fcf32b2b3c16cc5dea80123066b943c metadata.xml 900
@@ -20,6 +25,9 @@ SHA256 a53b73f34be6d5dff3316ac95d407f45b7272a4934420b21cf4ca2ea81b153da metadata
 MD5 725d9a91cc24adb4acd54e93e184a385 files/digest-magic-7.4.35 452
 RMD160 de2caa89cdee456de353c7e617760aa0ad5b287e files/digest-magic-7.4.35 452
 SHA256 456cbac35da77bf50c5fdf999ea0b4c4e157ab35d66407f02365c7b199d58fc5 files/digest-magic-7.4.35 452
+MD5 4e77d2211bc19f1962f08694e7ff7f56 files/digest-magic-7.4.46 452
+RMD160 c40727100b2399867f927284c33d97550c8fdb22 files/digest-magic-7.4.46 452
+SHA256 7efb00367088e17380929035e503b4ec3b4b482ba3214479cffa9e298f98060e files/digest-magic-7.4.46 452
 MD5 3fa03587663adbc03b400d97d90736a3 files/digest-magic-7.5.79 452
 RMD160 bdfe4c1a3dd94825afcb1b09eafa775ea0338c7b files/digest-magic-7.5.79 452
 SHA256 15646a5f7023bc9c2ab2d5ed3f83420c524f1f599f7137f105e69ba64495f1cb files/digest-magic-7.5.79 452
