@@ -1,0 +1,6 @@
+MD5 103192e92655f022c5a4dfd756dd3705 2002a.tar.gz 6601961
+RMD160 3eb7e61999b032dc47bddc3398543f4d4cde3adf 2002a.tar.gz 6601961
+SHA256 8b47889fcbcd36b1cdc2e51fc0aeb8c17b7780f559b01ca1209f9ed5f8c38d19 2002a.tar.gz 6601961
+MD5 31007e9a7cfb2ba1fc04a9f042598182 magic-7.4.46.tgz 3605986
+RMD160 695623481c4c9d4437bd30c629a6c8bac91f6ad6 magic-7.4.46.tgz 3605986
+SHA256 55f377500a861b12d21483b002c72a7a5fb9b35885f7dc858ee98f4a1e191cac magic-7.4.46.tgz 3605986
